Fixed an issue with the sidebar z-index and the modal's z-index.

--- a/imports/styles/_default.scss
+++ b/imports/styles/_default.scss
@@ -18,7 +18,7 @@
     left: -100vw; 
     width: 100vw; 
     bottom: 0;
-    z-index: 1;
+    z-index: 1000;
 
     @include desktop {
         display: flex;
